--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style2 fullscreen">
 						<div class="inner">
-							<h1>Hiperbole</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Hipérbole</h1>
+							<p>JA Hipérbole é ponto de encontro entre duas intersecções.  
+							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. Com  este projeto temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
+							.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
