--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 					<section id="intro" class="wrapper style2 fullscreen">
 						<div class="inner">
 							<h1>Hipérbole</h1>
-							<p>JA Hipérbole é ponto de encontro entre duas intersecções.  
-							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. Com  este projeto temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
-							.</p>
+							<p>A Hipérbole é ponto de encontro entre duas intersecções.  
+							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. 
+								Com  este projeto temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -50,7 +51,7 @@
 							<a href="#" class="image"><img src="images/amanda.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Amanda Pedralli Hamad</h2>
+									<h2>Amanda Hamad</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a class="button">Learn more</a></li>
