--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hipérbole</h1>
 							<p>A Hipérbole é ponto de encontro entre duas intersecções.  
 							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. 
-								Com  este projeto temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
+								Temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
