--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Amanda Hamad</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Psicóloga (CRP 07/33834) formada pela UNISINOS, tem a sua trajetória acadêmica marcada por experiências em saúde mental coletiva, música e rua.</p>
 									<ul class="actions">
 										<li><a class="button">Learn more</a></li>
 									</ul>
