--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Stephani Claudino</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>Psicóloga (CRP 07/34663) com graduação também pela UNISINOS, percorre discussões pelas políticas públicas, cultura pop e corpo.</p>
 									<ul class="actions">
 										<li><a class="button">Learn more</a></li>
 									</ul>
