--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 									<ul class="contact">
 										<li>
 											<h3>Endereço</h3>
-											<span>Av. Inconfidência, 650 #654<br />
-											Canoas, RS <br />
-											</span>
+											<span>Av. Inconfidência, 650 <br />
+											Canoas, RS - 92020-300<br />
+											BRASIL</span>
 										</li>
 										<li>
 											<h3>E-mail</h3>
