--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>O que fazemos</h2>
-							<p>Pensamos a psicoterapia de forma desaforada. Acreditamos na construção de redes e nos disponibilizamos de forma online e presencialmente. </p>
+							<p>Pensamos a psicoterapia de forma desaforada. Acreditamos na construção de redes e nos disponibilizamos on-line e presencialmente. </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
