New colors and small adjusts.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								Temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
 							</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
 							</ul>
 						</div>
 					</section>
@@ -48,13 +48,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/amanda.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/amanda-new2.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amanda Hamad</h2>
 									<p>Psicóloga (CRP 07/33834) formada pela UNISINOS, tem a sua trajetória acadêmica marcada por experiências em saúde mental coletiva, música e rua.</p>
 									<ul class="actions">
-										<li><a class="button">Learn more</a></li>
+										<li><a href="https://wa.me/5551992755221" target="_blank" rel="noopener noreferrer" class="button">Entre em contato</a></li>
 									</ul>
 								</div>
 							</div>
@@ -62,13 +62,13 @@
 					</section>
 					<section id="one" class="wrapper style3 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/image.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/stephani-new.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Stephani Claudino</h2>
 									<p>Psicóloga (CRP 07/34663) com graduação também pela UNISINOS, percorre discussões pelas políticas públicas, cultura pop e corpo.</p>
 									<ul class="actions">
-										<li><a class="button">Learn more</a></li>
+										<li><a href="https://wa.me/5551996067031" target="_blank" rel="noopener noreferrer" class="button">Entre em contato</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,7 +79,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>O que fazemos</h2>
-							<p>Pensamos a psicoterapia de forma desaforada. Acreditamos na construção de redes e nos disponibilizamos on-line e presencialmente. </p>
+							<p>Pensamos a psicoterapia de forma desaforada. Acreditamos na construção de redes e nos disponibilizamos on-line e presencialmente.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
@@ -112,9 +112,6 @@
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
