New website version.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="shortcut icon" type="image/png" href="/images/logo-red.png"/>
 		<noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -32,26 +37,35 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style2 fullscreen">
-						<div class="inner">
-							<h1>Hipérbole</h1>
-							<p>A Hipérbole é ponto de encontro entre duas intersecções.  
+					<section id="intro" class="wrapper style4 fullscreen">
+						<div class="inner collapsed">
+							<h1 class="font-mont font-black">Hipérbole <img src="images/logo-red.png" alt="Hiperbole logo" class="hiperbole-logo" data-position="center center" /></h1>
+							<p class="font-mont">A Hipérbole é ponto de encontro entre duas intersecções.  
 							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. 
 								Temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
 							</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Saiba mais</a></li>
-							</ul>
+							<!-- <ul class="actions">
+								<li><a href="#one" class="button scrolly font-black">Saiba mais</a></li>
+							</ul> -->
 						</div>
+						<div class="h color-red">H</div>
+						<div class="i color-red">i</div>
+						<div class="p color-red">P</div>
+						<div class="e color-blue">e</div>
+						<div class="r color-blue">R</div>
+						<div class="b color-blue">B</div>
+						<div class="o color-blue">O</div>
+						<div class="l color-red">l</div>
+						<div class="ee color-red">E</div>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/amanda-new2.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/amanda.png" alt="Amnda" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Amanda Hamad</h2>
+									<h2>Amanda Pedralli Hamad</h2>
 									<p>Psicóloga (CRP 07/33834) formada pela UNISINOS, tem a sua trajetória acadêmica marcada por experiências em saúde mental coletiva, música e rua.</p>
 									<ul class="actions">
 										<li><a href="https://wa.me/5551992755221" target="_blank" rel="noopener noreferrer" class="button">Entre em contato</a></li>
@@ -62,7 +76,7 @@
 					</section>
 					<section id="one" class="wrapper style3 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/stephani-new.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/stephani.png" alt="Stephani" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Stephani Claudino</h2>
@@ -82,34 +96,14 @@
 							<p>Pensamos a psicoterapia de forma desaforada. Acreditamos na construção de redes e nos disponibilizamos on-line e presencialmente.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
+									<h3>Atendimentos online</h3>
+									<p>A flexibilidade de horários oferecida pelos atendimentos online permite que os pacientes encontrem momentos que se ajustem às suas rotinas, tornando a terapia mais acessível e adaptável às suas necessidades individuais.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major"><i class="fa fa-home" aria-hidden="true"></i></span>
+									<h3>Atendimentos presenciais</h3>
+									<p>A terapia presencial oferece um ambiente terapêutico controlado, proporcionando uma pausa das distrações do mundo digital e criando um espaço físico seguro para a exploração de questões emocionais profundas e sensíveis.</p>
 								</section>
 							</div>
 						</div>
@@ -119,7 +113,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Contato</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Ficou com alguma dúvida? Caso prefira, preencha as seguintes informações para nos enviar uma mensagem.</p>
 							<div class="split style1">
 								<section>
 									<form action="javascript:void(0);">
@@ -138,7 +132,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Enviar mensagem</a></li>
+											<li><a href="" onclick="send_message()" class="button submit">Enviar mensagem</a></li>
 										</ul>
 									</form>
 								</section>
@@ -152,7 +146,7 @@
 										</li>
 										<li>
 											<h3>E-mail</h3>
-											<a href="#">contato@hiperbole.psc.br</a>
+											<a href="mailto:contato@hiperbolepsi.com.br">contato@hiperbolepsi.com.br</a>
 										</li>
 										<li>
 											<h3>Telefone</h3>
@@ -161,11 +155,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="http://instagram.com/hiperbole.psi" target="_blank" class="icon brands"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -179,8 +169,8 @@
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Hipérbole Psicologia. All rights reserved.</li>
+					<ul class="menu font-white">
+						<li>&copy; Hiperbole. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
@@ -191,8 +181,9 @@
 			<script src="js/jquery.scrolly.min.js"></script>
 			<script src="js/browser.min.js"></script>
 			<script src="js/breakpoints.min.js"></script>
-			<script src="js/util.js"></script>
-			<script src="js/main.js"></script>
+			<script src="js/util-min.js"></script>
+			<script src="js/main-min.js"></script>
+			<script src="js/whatsapp-min.js"></script>
 
 	</body>
 </html>
