Update Amanda's image and links.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									<h2>Amanda Pedralli Hamad</h2>
 									<p>Psicóloga (CRP 07/33834) formada pela UNISINOS, tem a sua trajetória acadêmica marcada por experiências em saúde mental coletiva, música e rua.</p>
 									<ul class="actions">
-										<li><a href="https://wa.me/5551992755221" target="_blank" rel="noopener noreferrer" class="button">Entre em contato</a></li>
+										<li><a href="https://www.escavador.com/sobre/10725850/amanda-pedralli-hamad" target="_blank" rel="noopener noreferrer" class="button">Mais sobre mim</a></li>
 									</ul>
 								</div>
 							</div>
@@ -82,7 +82,7 @@
 									<h2>Stephani Claudino</h2>
 									<p>Psicóloga (CRP 07/34663) com graduação também pela UNISINOS, percorre discussões pelas políticas públicas, cultura pop e corpo.</p>
 									<ul class="actions">
-										<li><a href="https://wa.me/5551996067031" target="_blank" rel="noopener noreferrer" class="button">Entre em contato</a></li>
+										<li><a href="https://wa.me/5551996067031" target="_blank" rel="noopener noreferrer" class="button">Mais sobre mim</a></li>
 									</ul>
 								</div>
 							</div>
