--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<h2>Stephani Claudino</h2>
 									<p>Psicóloga (CRP 07/34663) com graduação também pela UNISINOS, percorre discussões pelas políticas públicas, cultura pop e corpo.</p>
 									<ul class="actions">
-										<li><a href="https://wa.me/5551996067031" target="_blank" rel="noopener noreferrer" class="button">Mais sobre mim</a></li>
+										<li><a href="https://www.escavador.com/sobre/277468328/stephani-martins-claudino" target="_blank" rel="noopener noreferrer" class="button">Mais sobre mim</a></li>
 									</ul>
 								</div>
 							</div>
@@ -98,12 +98,12 @@
 								<section>
 									<span class="icon solid major"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
 									<h3>Atendimentos online</h3>
-									<p>A flexibilidade de horários oferecida pelos atendimentos online permite que os pacientes encontrem momentos que se ajustem às suas rotinas, tornando a terapia mais acessível e adaptável às suas necessidades individuais.</p>
+									<p>A flexibilidade de horários oferecida pelos atendimentos online permite que os pacientes encontrem momentos que se ajustem às suas rotinas, tornando a psicoterapia mais acessível e adaptável às suas necessidades individuais.</p>
 								</section>
 								<section>
 									<span class="icon solid major"><i class="fa fa-home" aria-hidden="true"></i></span>
 									<h3>Atendimentos presenciais</h3>
-									<p>A terapia presencial oferece um ambiente terapêutico controlado, proporcionando uma pausa das distrações do mundo digital e criando um espaço físico seguro para a exploração de questões emocionais profundas e sensíveis.</p>
+									<p>A psicoterapia presencial oferece um ambiente psicoterapêutico controlado, proporcionando uma pausa das distrações do mundo digital e criando um espaço físico seguro para a exploração de questões emocionais profundas e sensíveis.</p>
 								</section>
 							</div>
 						</div>
