--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style4 fullscreen">
 						<div class="inner collapsed">
-							<h1 class="font-mont font-black">Hipérbole <img src="images/logo-red.png" alt="Hiperbole logo" class="hiperbole-logo" data-position="center center" /></h1>
+							<h1 class="font-mont font-black">Hipérbole <img src="images/logo-red.png" alt="Hiperbole logo" class="hiperbole-logo" data-position="left center" /></h1>
 							<p class="font-mont">A Hipérbole é ponto de encontro entre duas intersecções.  
 							Somos duas psicólogas que criam juntas desde 2019, quando ainda estudantes. 
 								Temos o intuito de ser vetor no cuidado em saúde mental, subvertendo o que se é instituído para essa possibilidade.
@@ -62,7 +62,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/amanda.png" alt="Amnda" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/amanda.png" alt="Amnda" data-position="right center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amanda Pedralli Hamad</h2>
