--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/amanda.png" alt="Amnda" data-position="right center" /></a>
+							<a href="#" class="image"><img src="images/amanda.png" alt="Amnda" data-position="left center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Amanda Pedralli Hamad</h2>
@@ -76,7 +76,7 @@
 					</section>
 					<section id="one" class="wrapper style3 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/stephani.png" alt="Stephani" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/stephani.png" alt="Stephani" data-position="right center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Stephani Claudino</h2>
